# libvmod-cluster

./: Dockerfile  LICENSE  Makefile.am  README.rst  configure.ac  master.patch
.github/: dependabot.yml
.github/workflows/: docker.yml  pr.yml
example/: run_example.sh  vshard.example.vcl  vshard.inc.vcl  vshard_probe.inc.vcl
src/: Makefile.am  flint.lnt  tbl_resolve.h  vmod_cluster.c  vmod_cluster.vcc  vmod_compat.h
src/vtc/: cfg.vtc  cld.vtc  cluster_selected.vtc  deep.vtc  deep_stk.vtc  direct.vtc  lazy.vtc  lazy_shard.vtc  now.vtc  selected.vtc  shallow.vtc
vcl/: vshard.inc.vcl
